[gd_scene load_steps=10 format=3 uid="uid://bi58ak4evm60c"]

[ext_resource type="Script" path="res://Scripts/EnemyScript.gd" id="1_xx0lm"]
[ext_resource type="Texture2D" uid="uid://cl23432wertbw" path="res://Assets/Chars/Aglaea.png" id="2_vw2bq"]
[ext_resource type="Texture2D" uid="uid://c7ob7h3w62nk4" path="res://Assets/Element/Wind.png" id="4_wg36s"]
[ext_resource type="PackedScene" path="res://healthbar.tscn" id="5_x2wxd"]

[sub_resource type="Animation" id="Animation_smnpu"]
resource_name = "Bounce"
length = 0.5
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-2.99999, 3.49996), Vector2(-3, 17)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.301389, 0.30758), Vector2(0.301389, 0.231778)]
}

[sub_resource type="Animation" id="Animation_fo36m"]
resource_name = "Idle"

[sub_resource type="Animation" id="Animation_w022h"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-2.99999, 3.49996)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.301389, 0.30758)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_61f3h"]
_data = {
"Bounce": SubResource("Animation_smnpu"),
"Idle": SubResource("Animation_fo36m"),
"RESET": SubResource("Animation_w022h")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jti4b"]
size = Vector2(146, 174)

[node name="Enemy" type="Node2D"]
position = Vector2(-1, 0)
script = ExtResource("1_xx0lm")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-2.99999, 3.49996)
scale = Vector2(0.301389, 0.30758)
texture = ExtResource("2_vw2bq")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite2D"]
libraries = {
"": SubResource("AnimationLibrary_61f3h")
}

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(5, -5)
shape = SubResource("RectangleShape2D_jti4b")

[node name="Healthbar" parent="." instance=ExtResource("5_x2wxd")]
offset_left = -50.0
offset_top = -107.0
offset_right = 61.0
offset_bottom = -91.0
max_value = 150.0

[node name="HP" type="Label" parent="."]
offset_left = -53.0
offset_top = -92.0
offset_right = 9.0
offset_bottom = -69.0
text = "100/100"

[node name="Name" type="Label" parent="."]
offset_left = -52.0
offset_top = -129.0
offset_right = -5.0
offset_bottom = -106.0
text = "Name"

[node name="Weakness" type="Sprite2D" parent="."]
position = Vector2(47, -122)
scale = Vector2(0.0359376, 0.0367188)
texture = ExtResource("4_wg36s")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
